--- a/landing page/index.html
+++ b/landing page/index.html
@@ -13,29 +13,20 @@
     <div class="header">
 
         <header class="header-content">
-
-            <a href="#logo" class="logo">
-                <img src="Photos/logo.jpg" alt="logoImage" class="logo-icon" width="100px" />
-                <span class="logo-text">MH Voting</span>
-            </a>
-
+            <div class="logo">
+            <img src="Photos/logo.jpg" alt="logoImage" class="logo-icon" />
+            </div>
             <nav class="nav">
                 <a href="#home" class="nav-link">Home</a>
                 <a href="#votenow" class="nav-link">Vote Now</a>
-                <a href="#feedback" class="nav-link">Feedback</a>
-                <a href="#about" class="nav-link">About</a>
+                <a href="#feedback" class="nav-link">Admin panel</a>
+                <a href="#about" class="nav-link">Feedback</a>
             </nav>
 
             <a href="#contact" class="contact-button">
-                Contact Us
+                Login
             </a>
-
-            <button type="button" class="menu-button">
-                <img src="./images/Hamburger.svg" alt="menuButton" class="menu-icon" />
-            </button>
-
         </header>
-
     </div>
 
     <div class="content">
@@ -43,13 +34,13 @@
 
             <div class="content-left">
                 <p class="section-label">Your Voice. Your Vote</p>
-                <h1 class="section-title">Your vote matters – and so does your experience.</h1>
+                <h1 class="section-title">Your vote matters - and so does your experience.</h1>
                 <p class="section-description">
                     Welcome to MH Voting. The trusted platform for secure and seamless online voting. Our mission is to make voting simple, accessible, and hassle-free, so you can cast your vote anytime, anywhere, with confidence. Whether you're participating in elections,
                     polls, or surveys, we prioritize security and ease of use to ensure your voice is heard. Join us today and be part of the future of voting.
                 </p>
                 <div class="button-group">
-                    <a href="#start" class="start-button">Start Now</a>
+                    <a href="#start" class="start-button">Register</a>
                     <a href="#tour" class="tour-button">Take Tour</a>
                 </div>
             </div>
@@ -57,7 +48,7 @@
             <div class="content-right">
 
                 <div class="image-container">
-                    <img src="Photos/choice.jpg" alt="sectionImage" class="section-image" />
+                    <img src="Photos/choice-02.jpg" alt="sectionImage" class="section-image" />
                 </div>
 
             </div>
@@ -104,9 +95,9 @@
 
             <div class="feature-grid">
                 <!-- card 1 -->
-                <div class="feature-card">
+                <div style="background-color: #6366F1;" class="feature-card">
                     <div class="icon-container">
-                        <img class="feature-svg" src="./images/PersonalizedLearn.svg" />
+                        <img class="feature-svg scale" src="Photos/learning.jpg"/>
                     </div>
                     <div class="feature-info">
                         <div class="feature-title">
@@ -118,9 +109,9 @@
                     </div>
                 </div>
                 <!-- card 2 -->
-                <div class="feature-card">
+                <div style="background-color: #333333;" class="feature-card">
                     <div class="icon-container">
-                        <img class="feature-svg" src="./images/Affordability.svg" />
+                        <img  class="feature-svg scale" src="Photos/affordable.jpg" />
                     </div>
                     <div class="feature-info">
                         <div class="feature-title">
@@ -132,9 +123,9 @@
                     </div>
                 </div>
                 <!-- card 3 -->
-                <div class="feature-card">
+                <div style="background-color: #6366F1;" class="feature-card">
                     <div class="icon-container">
-                        <img class="feature-svg" src="./images/IndustryPatner.svg" />
+                        <img class="feature-svg scale" src="Photos/partnership.jpg" />
                     </div>
                     <div class="feature-info">
                         <div class="feature-title">
@@ -146,9 +137,9 @@
                     </div>
                 </div>
                 <!-- card 4 -->
-                <div class="feature-card">
+                <div style="background-color: #333333;" class="feature-card">
                     <div class="icon-container">
-                        <img class="feature-svg" src="./images/InnovativeTech.svg" />
+                        <img class="feature-svg scale" src="Photos/innovative.jpg" />
                     </div>
                     <div class="feature-info">
                         <div class="feature-title">
@@ -160,9 +151,9 @@
                     </div>
                 </div>
                 <!-- card 5 -->
-                <div class="feature-card">
+                <div style="background-color: #6366F1;" class="feature-card">
                     <div class="icon-container">
-                        <img class="feature-svg" src="./images/IndustryPatner.svg" />
+                        <img class="feature-svg scale" src="Photos/responsive.jpg" />
                     </div>
                     <div class="feature-info">
                         <div class="feature-title">
@@ -174,9 +165,9 @@
                     </div>
                 </div>
                 <!-- card 6 -->
-                <div class="feature-card">
+                <div style="background-color: #333333;"  class="feature-card">
                     <div class="icon-container">
-                        <img class="feature-svg" src="./images/Analytics.svg" />
+                        <img class="feature-svg scale" src="Photos/analytics.jpg" />
                     </div>
                     <div class="feature-info">
                         <div class="feature-title">
@@ -237,9 +228,7 @@
             <div class="footer-top">
 
                 <div class="comp-logo">
-                    <a class="logo-link" href="#">
-                        <img class="logo-svg" src="Photos/logo.jpg" /> MH voting
-                    </a>
+                    <img style="width: 150px; height: 150px;" src="Photos/logo.jpg" alt="logoImage" class="logo-icon" />
                 </div>
 
                 <p class="filler-text">Seamless Learning for Brighter Futures.</p>
