--- a/FeedBack Form/feedback.html
+++ b/FeedBack Form/feedback.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feed Back Form</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="feedback.css">
+    <link rel="stylesheet" href="/landing page/style.css">
+
 </head>
 
 <body>
@@ -35,7 +37,7 @@
                     <input type="radio" id="star1" name="rating" value="1"><label for="star1" class="star">&#9733;</label>
                 </div>
             </div>
-            <button type="submit" class="submit-btn">Submit Feedback</button>
+            <button style="margin: 0 auto;" type="submit" class="contact-button">Submit Feedback</button>
         </form>
     </div>
 
