--- a/landing page/Register.html
+++ b/landing page/Register.html
@@ -6,15 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login and Registration</title>
 
-    <link rel="stylesheet" href="form.css">
-
+    <link rel="stylesheet" href="register.css">
 </head>
 
 <body>
-
     <div class="form-container">
         <h2 id="formTitle">Login</h2>
-
         <!-- Login Form -->
         <form id="loginForm">
             <label for="loginEmail"> Email</label>
@@ -37,7 +34,6 @@
             <input type="email" id="registerEmail" placeholder="Enter your email" required>
             <P class="emailError" style="color: red; margin: 2px 0px; display: none;">Email already Exist</P>
 
-
             <label for="registerPassword">Password</label>
             <input type="password" id="registerPassword" placeholder="Create a password">
             <P class="passError" style="color: red; margin: 2px 0px; display: none; margin-bottom: 4px;">invalid
@@ -50,110 +46,115 @@
             <a href="#" id="toggleLink">Don't have an account? Register here</a>
         </div>
     </div>
-<script>
-    // References to forms and elements
-    const formTitle = document.getElementById('formTitle');
-    const loginForm = document.getElementById('loginForm');
-    const registerForm = document.getElementById('registerForm');
-    const toggleLink = document.getElementById('toggleLink');
+    
+    <script>
+        // References to forms and elements
+        const formTitle = document.getElementById('formTitle');
+        const loginForm = document.getElementById('loginForm');
+        const registerForm = document.getElementById('registerForm');
+        const toggleLink = document.getElementById('toggleLink');
 
-    let isLogin = true;
+        let isLogin = true;
 
-    // Toggle between login and register forms
-    toggleLink.addEventListener('click', (e) => {
-        e.preventDefault();
-        isLogin = !isLogin;
+        // Toggle between login and register forms
+        toggleLink.addEventListener('click', (e) => {
+            e.preventDefault();
+            isLogin = !isLogin;
 
-        if (isLogin) {
-            formTitle.textContent = 'Login';
-            loginForm.style.display = 'block';
-            registerForm.style.display = 'none';
-            toggleLink.textContent = "Don't have an account? Register here";
-        } else {
-            formTitle.textContent = 'Register';
-            loginForm.style.display = 'none';
-            registerForm.style.display = 'block';
-            toggleLink.textContent = "Already have an account? Login here";
-        }
-    });
+            if (isLogin) {
+                formTitle.textContent = 'Login';
+                loginForm.style.display = 'block';
+                registerForm.style.display = 'none';
+                toggleLink.textContent = "Don't have an account? Register here";
+            } else {
+                formTitle.textContent = 'Register';
+                loginForm.style.display = 'none';
+                registerForm.style.display = 'block';
+                toggleLink.textContent = "Already have an account? Login here";
+            }
+        });
 
-    // Handle Login
-    loginForm.addEventListener('submit', (e) => {
-        e.preventDefault();
-        const email = document.getElementById('loginEmail').value;
-        const password = document.getElementById('loginPassword').value;
-        const users = JSON.parse(localStorage.getItem('users')) || [];
-        const user = users.find(u => u.email === email && u.password === password);
+        // Handle Login
+        loginForm.addEventListener('submit', (e) => {
+            e.preventDefault();
+            const email = document.getElementById('loginEmail').value;
+            const password = document.getElementById('loginPassword').value;
+            const users = JSON.parse(localStorage.getItem('users')) || [];
+            const user = users.find(u => u.email === email && u.password === password);
 
-        if (user) {
-            localStorage.setItem('loggedIn', 'true');
-            localStorage.setItem('currentUser', JSON.stringify(user));
-            window.location.href = 'index.html';
-        } else {
-            document.querySelector(".error").style.display = "block";
-            document.querySelector(".error").innerHTML = "Invalid email or password";
-        }
-    });
+            if (user) {
+                localStorage.setItem('loggedIn', 'true');
+                localStorage.setItem('currentUser', JSON.stringify(user));
+                window.location.href = 'index.html'; // Redirect to voting or profile page
+            } else {
+                document.querySelector(".error").style.display = "block";
+                document.querySelector(".error").innerHTML = "Invalid email or password";
+            }
+        });
 
-    // Handle Registration
-    registerForm.addEventListener('submit', (e) => {
-        e.preventDefault();
+        // Handle Registration
+        registerForm.addEventListener('submit', (e) => {
+            e.preventDefault();
 
-        const email = document.getElementById('registerEmail').value;
-        const username = document.getElementById('registerUsername').value;
-        const password = document.getElementById('registerPassword').value;
+            const email = document.getElementById('registerEmail').value;
+            const username = document.getElementById('registerUsername').value;
+            const password = document.getElementById('registerPassword').value;
 
-        // Validate input fields
-        if (username.length < 4 || password.length < 7) {
-            if (username.length < 4) {
+            // Validate input fields
+            if (username.length < 4 || password.length < 7) {
+                if (username.length < 4) {
+                    document.querySelector(".userError").style.display = 'block';
+                    document.querySelector(".userError").innerHTML = 'invalid Name';
+                    document.querySelector(".passError").style.display = 'none';
+
+
+                } else {
+                    document.querySelector(".userError").style.display = 'none';
+                    document.querySelector(".passError").style.display = 'none';
+                    
+                }
+
+                if (password.length < 7) {
+                    document.querySelector(".passError").style.display = 'block';
+                    document.querySelector(".passError").innerHTML = 'Password must be at least 7 characters long';
+                } else {
+                    document.querySelector(".passError").style.display = 'none';
+                }
+                return;
+            }
+
+            const users = JSON.parse(localStorage.getItem('users')) || [];
+            const userNameExists = users.some(u => u.username === username);
+            const userEmailExists = users.some(u => u.email === email);
+
+            // Check for existing username or email
+            if (userNameExists) {
                 document.querySelector(".userError").style.display = 'block';
-                document.querySelector(".userError").innerHTML = 'Username must be at least 4 characters long';
+                document.querySelector(".userError").innerHTML = 'Username already exists';
+                return;
             } else {
                 document.querySelector(".userError").style.display = 'none';
             }
 
-            if (password.length < 7) {
-                document.querySelector(".passError").style.display = 'block';
-                document.querySelector(".passError").innerHTML = 'Password must be at least 7 characters long';
+            if (userEmailExists) {
+                document.querySelector(".emailError").style.display = 'block';
+                document.querySelector(".emailError").innerHTML = 'Email already exists';
+                return;
             } else {
-                document.querySelector(".passError").style.display = 'none';
+                document.querySelector(".emailError").style.display = 'none';
             }
-            return;
-        }
 
-        const users = JSON.parse(localStorage.getItem('users')) || [];
-        const userNameExists = users.some(u => u.username === username);
-        const userEmailExists = users.some(u => u.email === email);
+            // Save new user
+            const newUser = { email, username, password, vote: null }; // Add vote property
+            users.push(newUser);
+            localStorage.setItem('users', JSON.stringify(users));
+            localStorage.setItem('loggedIn', 'true');
+            localStorage.setItem('currentUser', JSON.stringify(newUser));
 
-        // Check for existing username or email
-        if (userNameExists) {
-            document.querySelector(".userError").style.display = 'block';
-            document.querySelector(".userError").innerHTML = 'Username already exists';
-            return;
-        } else {
-            document.querySelector(".userError").style.display = 'none';
-        }
-
-        if (userEmailExists) {
-            document.querySelector(".emailError").style.display = 'block';
-            document.querySelector(".emailError").innerHTML = 'Email already exists';
-            return;
-        } else {
-            document.querySelector(".emailError").style.display = 'none';
-        }
-
-        // Save new user
-        const newUser = { email, username, password };
-        users.push(newUser);
-        localStorage.setItem('users', JSON.stringify(users));
-        localStorage.setItem('loggedIn', 'true');
-        localStorage.setItem('currentUser', JSON.stringify(newUser));
-
-        alert('Registration successful!');
-        window.location.href = 'index.html'; 
-    });
-</script>
+            alert('Registration successful!');
+            window.location.href = 'index.html'; // Redirect to voting or profile page
+        });
+    </script>
 
 </body>
-
 </html>
