done by Hashid gaba

--- a/landing page/index.html
+++ b/landing page/index.html
@@ -48,7 +48,7 @@
                         today and be part of the future of voting.
                     </p>
                     <div class="button-group">
-                        <a href="votenow.html" style="display: none;" class="contact-button vote" id="voteNow">Vote
+                        <a href="/vote Now/votenow.html" style="display: none;" class="contact-button vote" id="voteNow">Vote
                             Now</a>
                         <a class="contact-button" id="register">Register</a>
                         <a class="contact-button" id="tower">Take Tour</a>
