--- a/Register.html
+++ b/Register.html
@@ -85,7 +85,7 @@
             if (user) {
                 localStorage.setItem('loggedIn', 'true');
                 localStorage.setItem('currentUser', JSON.stringify(user));
-                window.location.href = '/';  // This will redirect to index.html // Redirect to voting or profile page
+                window.location.href = 'index.html';  // This will redirect to index.html // Redirect to voting or profile page
             } else {
                 document.querySelector(".error").style.display = "block";
                 document.querySelector(".error").innerHTML = "Invalid email or password";
@@ -152,7 +152,7 @@
             localStorage.setItem('currentUser', JSON.stringify(newUser));
 
             alert('Registration successful!');
-            window.location.href = '/';  // This will redirect to index.html // Redirect to voting or profile page
+            window.location.href = 'index.html';  // This will redirect to index.html // Redirect to voting or profile page
         });
     </script>
 
