Done by Hashid gaba

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 
         <div class="content" style="overflow: hidden;">
             <section style="overflow: hidden;" class="main-section">
-
-                <div class="content-left">
+                <div class="content-left hide">
                     <p class="section-label">Your Voice. Your Vote</p>
                     <h1 class="section-title">Your vote matters - and so does your experience.</h1>
                     <p class="section-description">
@@ -134,7 +133,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="content-right">
+                <div class="content-right hide">
 
                     <div class="image-container">
                         <img src="Photos/choice-02.jpg" alt="sectionImage" class="section-image" />
@@ -144,7 +143,7 @@
             </section>
         </div>
 
-        <div style="overflow: hidden;" class="company-container">
+        <div style="overflow: hidden;" class="company-container hide">
             <h2 class="company-title">Trusted by the best</h2>
             <div class="company-grid">
 
@@ -171,7 +170,7 @@
             </div>
         </div>
 
-        <div style="overflow: hidden;" class="feature-container">
+        <div style="overflow: hidden;" class="feature-container hide">
             <div class="feature-content">
                 <div class="main-info">
                     <h2 class="main-title">
@@ -280,7 +279,7 @@
 
 
 
-        <div style="overflow: hidden;" class="newsletter-container">
+        <div style="overflow: hidden;" class="newsletter-container hide">
             <div class="newsletter-content">
                 <!-- left part  -->
                 <div class="news-left">
@@ -318,8 +317,8 @@
             </div>
         </div>
 
-        <div style="overflow: hidden;" class="footer-container">
-            <footer class="footer">
+        <div style="overflow: hidden;" class="footer-container ">
+            <footer class="footer hide">
 
                 <div class="footer-top">
 
